--- a/css/wc22/wc22.css
+++ b/css/wc22/wc22.css
@@ -5,6 +5,7 @@
 	--light-grayish-blue: #64748B;
 	--nelvy: #1A2E4D;
 	--red-wine: #AA0A3E;
+	--qatar-maroon: #8A1538;
 }
 * {
 	-webkit-box-sizing: border-box;
@@ -574,6 +575,68 @@ iframe {
 	line-height: 20px;
 }
 /* ~vids */
+/* tnc */
+.tnc-box {
+	display: flex;
+	align-items: flex-end;
+	justify-content: space-between;
+	background-color: var(--other-1);
+	margin: 0 auto;
+	border-radius: 8px;
+	max-width: 1120px;
+	width: 100%;
+	height: 91px;
+}
+.tnc-box > a {
+	margin-top: auto;
+	margin-bottom: 14px;
+	font-size: 12px;
+	line-height: 18px;
+	text-decoration: underline;
+	color: var(--light-grayish-blue);
+}
+.tnc-box > img {
+	margin-left: 8px;
+}
+.tnc-box__texts {
+	max-width: 440px;
+	width: 100%;
+	padding: 14px 0;
+}
+.tnc-box__texts h3 {
+	font-size: 16px;
+	line-height: 20px;
+	color: var(--charcoal);
+	text-transform: uppercase;
+	margin-bottom: 8px;
+}
+.tnc-box__texts p {
+	font-size: 12px;
+	line-height: 18px;
+	color: var(--light-grayish-blue);
+}
+.tnc-box__logos {
+	background-color: var(--qatar-maroon);
+	position: relative;
+	padding: 7px 42px;
+	display: flex;
+	align-items: center;
+	height: 91px;
+	border-radius: 0 8px 8px 0;
+	margin-right: -2px;
+}
+.tnc-box__logos:before {
+	content: "";
+	background-image: url("../../images/wc22/tnc/tnc-box-zigzag.svg");
+	display: block;
+	width: 32px;
+	height: 91px;
+	position: absolute;
+	left: -32px;
+	top: 0;
+
+}
+/* ~tnc */
 @media (max-width: 1023px){
 	.swiper-odds-prev,
 	.swiper-odds-next {
