--- a/css/wc22/wc22.css
+++ b/css/wc22/wc22.css
@@ -153,10 +153,12 @@ iframe {
 .wc22-tab-items__item {
 	position: relative;
 	overflow: hidden;
+}
+.wc22-tab-items__item--1 {
 	background: -o-linear-gradient(338.85deg, #121C79 0%, #AF0A3B 100%);
 	background: linear-gradient(111.15deg, #121C79 0%, #AF0A3B 100%);
 }
-.wc22-tab-items__item:before {
+.wc22-tab-items__item--1:before {
 	content: "";
 	background-image: url("../../images/wc22/bg-shape1.png");
 	background-repeat: no-repeat;
@@ -639,6 +641,11 @@ iframe {
 
 }
 /* ~tnc */
+/* broadage */
+.broadage-widgets-body.broadage-fixture.broadage-soccer.broadage-theme-white {
+	padding: 10px;
+}
+/* ~broadage */
 @media (max-width: 1023px){
 	.swiper-odds-prev,
 	.swiper-odds-next {
