removed index.html css fix

--- a/css/wc22/wc22.css
+++ b/css/wc22/wc22.css
@@ -7,7 +7,7 @@
 	--red-wine: #AA0A3E;
 	--qatar-maroon: #8A1538;
 }
-* {
+.wc22 * {
 	-webkit-box-sizing: border-box;
 	        box-sizing: border-box;
 }
