--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -2,7 +2,7 @@
 	<h3 class="bracket-title" data-txt="txt21"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="f,a,b,c">
+		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -11,7 +11,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="d,e">
+		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="b">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -23,7 +23,7 @@
 	</div>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="b,a,d,e,f">
+		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="c">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -32,7 +32,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="a,c">
+		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="d">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -47,7 +47,7 @@
 	<h3 class="bracket-title" data-txt="txt22"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="f,a,b,c,d,e">
+		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -56,7 +56,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="b,a,d,e,f,c">
+		<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="c,d">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -71,7 +71,7 @@
 	<div class="bracket finals">
 		<h3 class="bracket-title" data-txt="txt23"></h3>
 		<div class="match-bracket">
-			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="f,a,b,c,d,e">
+			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -80,7 +80,7 @@
 					<div class="scrollbar-inner list"></div>
 				</div>
 			</div>
-			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2"  data-groups="c,d,e,f,a,b">
+			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2"  data-groups="">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -111,7 +111,7 @@
 	<h3 class="bracket-title" data-txt="txt22"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="c,d,e,f,a,b">
+		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -120,7 +120,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="e,a,b,c,d,f">
+		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -135,7 +135,7 @@
 	<h3 class="bracket-title" data-txt="txt21"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="c,d,e,f">
+		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -144,7 +144,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="a,b">
+		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -156,7 +156,7 @@
 	</div>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="e,a,b,c,d">
+		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -165,7 +165,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="d,f">
+		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="e">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
