--- a/views/pred-dd-mobile.html
+++ b/views/pred-dd-mobile.html
@@ -1,1 +1,190 @@
-mobile
+<div>
+	<div class="bracket quarter-finals">
+		<h3 class="bracket-title" data-txt="txt21"></h3>
+		<div class="match-bracket-wrap quarter-finals">
+			<div class="bracket-line"><span></span></div>
+			<div class="match-bracket">
+				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="f,a,b,c">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="d,e">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+			</div>
+			<div class="match-bracket">
+				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="b,a,d,e,f">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="a,c">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="bracket quarter-finals">
+		<h3 class="bracket-title" data-txt="txt21"></h3>
+		<div class="match-bracket-wrap quarter-finals">
+			<div class="bracket-line"><span></span></div>
+			<div class="match-bracket">
+				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="c,d,e,f">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="a,b">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+			</div>
+			<div class="match-bracket">
+				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="e,a,b,c,d">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="d,f">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div>
+	<div class="match-bracket-wrap semi-finals">
+		<div class="bracket-line"><span></span></div>
+		<div class="bracket semi-finals">
+			<h3 class="bracket-title" data-txt="txt22"></h3>
+			<div class="match-bracket">
+				<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="f,a,b,c,d,e">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+				<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="b,a,d,e,f,c">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="bracket semi-finals">
+			<h3 class="bracket-title" data-txt="txt22"></h3>
+			<div class="match-bracket">
+				<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="c,d,e,f,a,b">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+				<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="e,a,b,c,d,f">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div>
+	<div class="match-bracket-wrap finals">
+		<div class="bracket-line"><span></span></div>
+		<div class="bracket finals">
+			<h3 class="bracket-title" data-txt="txt23"></h3>
+			<div class="match-bracket">
+				<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="f,a,b,c,d,e">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+				<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2" data-groups="c,d,e,f,a,b">
+					<div class="dd-selected placeholder">
+						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+					</div>
+					<div class="dd-option-wrap">
+						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+						<div class="scrollbar-inner list"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<div>
+	<div class="bracket champion">
+		<div class="dd-champ-wrap">
+			<h3 class="bracket-title" data-txt="txt24"></h3>
+			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f">
+				<div class="dd-selected placeholder">
+					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+				</div>
+				<div class="dd-option-wrap">
+					<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
+					<div class="scrollbar-inner list"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<img src="assets/images/logo-uefa.png" class="logo-uefa" />
