--- a/css/wc22/wc22-paul-stadium.css
+++ b/css/wc22/wc22-paul-stadium.css
@@ -50,3 +50,48 @@
         max-width: 44.729vw;
     }
 }
+
+@media (max-width: 1023px) {
+    .wc22-tab-items__item--2 .pd-0 {
+        padding: 0 16px;
+    }
+
+    .wc22-tab-items__item--2 .inner .stadiums .stadiums--header > h4 {
+        font-size: 1em;
+    }
+
+    .stadiums--flex-content {
+        flex-direction: column;
+    }
+
+    .stadiums--flex-content .description > p {
+        margin-bottom: 15px;
+    }
+}
+
+@media (max-width: 767px) {
+    .wc22-tab-items__item--2 .pd-0 {
+        padding: 0 16px;
+    }
+
+    .stadiums--flex-content .description > p {
+        font-size: 14px;
+        line-height: 18px;
+        margin-bottom: 15px;
+    }
+
+    .cover--right img {
+        width: 100%;
+        max-width: 1024px;
+    }
+}
+
+@media (max-width: 375px) {
+    .stadiums--flex-content .description {
+        max-width: 343px;
+    }
+
+    .stadiums--flex-content .description > p {
+        font-size: 12px;
+    }
+}
