Removal of previous player mask in timer, change new asset

--- a/css/wc22/wc22-paul.css
+++ b/css/wc22/wc22-paul.css
@@ -115,6 +115,10 @@
     z-index: 99;
 }
 
+.fifa--mask-ban img {
+    max-width: 144px;
+}
+
 
 @media (max-width: 1366px) {
     .fifa--cd ul li {
