--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -1,5 +1,5 @@
 <div class="bracket quarter-finals west">
-	<h3 class="bracket-title" data-txt="txt21"></h3>
+	<!-- <h3 class="bracket-title" data-txt="txt21"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a">
@@ -44,7 +44,7 @@
 	</div>
 </div>
 <div class="bracket semi-finals west">
-	<h3 class="bracket-title" data-txt="txt22"></h3>
+	<!-- <h3 class="bracket-title" data-txt="txt22"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b">
@@ -69,8 +69,9 @@
 </div>
 <div class="middle-wrap">
 	<div class="bracket finals">
-		<h3 class="bracket-title" data-txt="txt23"></h3>
+		<!-- <h3 class="bracket-title" data-txt="txt23"></h3> -->
 		<div class="match-bracket">
+			<div class="bracket-line"><span></span></div>
 			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="">
 				<div class="dd-selected placeholder">
 					<input type="text" />
@@ -93,7 +94,7 @@
 	</div>
 	<div class="bracket champion">
 		<div class="dd-champ-wrap">
-			<h3 class="bracket-title" data-txt="txt24"></h3>
+			<!-- <h3 class="bracket-title" data-txt="txt24"></h3> -->
 			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f">
 				<div class="dd-selected placeholder">
 					<input type="text" />
@@ -104,11 +105,11 @@
 				</div>
 			</div>
 		</div>
-		<img src="assets/images/logo-uefa.png" class="logo-uefa" />
+		<img src="./images/prediction/logo-wc22.png" class="logo-wc22" />
 	</div>
 </div>
 <div class="bracket semi-finals east">
-	<h3 class="bracket-title" data-txt="txt22"></h3>
+	<!-- <h3 class="bracket-title" data-txt="txt22"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="">
@@ -132,7 +133,7 @@
 	</div>
 </div>
 <div class="bracket quarter-finals east">
-	<h3 class="bracket-title" data-txt="txt21"></h3>
+	<!-- <h3 class="bracket-title" data-txt="txt21"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="">
