--- a/css/wc22/wc22-jemson.css
+++ b/css/wc22/wc22-jemson.css
@@ -460,7 +460,7 @@
 }
 .cta-area {
 	text-align: center;
-	margin-bottom: 24px;
+	/* margin-bottom: 24px; */
 	display: flex;
 	justify-content: center;
 }
