--- a/css/wc22/wc22.css
+++ b/css/wc22/wc22.css
@@ -164,7 +164,7 @@ iframe {
 	position: relative;
 	overflow: hidden;
 }
-.wc22-tab-items__item--1 {
+/* .wc22-tab-items__item--1 {
 	background: -o-linear-gradient(338.85deg, #121C79 0%, #AF0A3B 100%);
 	background: linear-gradient(111.15deg, #121C79 0%, #AF0A3B 100%);
 }
@@ -173,12 +173,33 @@ iframe {
 	background-image: url("../../images/wc22/bg-shape1.png");
 	background-repeat: no-repeat;
 	background-position: center top;
-	/* background-size: 1360px auto; */
 	width: 100%;
 	height: 855px;
 	position: absolute;
 	display: block;
 	mix-blend-mode: hard-light;
+} */
+.wc22-tab-items__item--1__items {
+	background: -o-linear-gradient(338.85deg, #121C79 0%, #AF0A3B 100%);
+	background: linear-gradient(111.15deg, #121C79 0%, #AF0A3B 100%);
+	position: relative;
+	overflow: hidden;
+	padding-bottom: 48px;
+}
+.wc22-tab-items__item--1__items:before {
+	content: "";
+	background-image: url("../../images/wc22/bg-shape1.png");
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-size: 1360px 100%;
+	width: 100%;
+	height: 855px;
+	position: absolute;
+	display: block;
+	mix-blend-mode: hard-light;
+}
+.wc22-tab-items__item--1__items > * {
+	position: relative;
 }
 .wc22-tab-items__item--1__subtabs {
 	text-align: center;
@@ -252,6 +273,9 @@ iframe {
 	line-height: 24px;
 	text-align: center;
 	color: var(--other-1);
+}
+.odds-live-card button.btn {
+	display: inline-block;
 }
 .odds-live-card__teams {
 	display: -webkit-box;
