--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -72,7 +72,7 @@
 		<!-- <h3 class="bracket-title" data-txt="txt23"></h3> -->
 		<div class="match-bracket">
 			<div class="bracket-line"><span></span></div>
-			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="">
+			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -81,7 +81,7 @@
 					<div class="scrollbar-inner list"></div>
 				</div>
 			</div>
-			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2"  data-groups="">
+			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2"  data-groups="e,f,g,h">
 				<div class="dd-selected placeholder">
 					<input type="text" />
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -112,7 +112,7 @@
 	<!-- <h3 class="bracket-title" data-txt="txt22"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="">
+		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-target="e-semi-1" data-groups="g,h">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -121,7 +121,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="">
+		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="f,e">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -136,7 +136,7 @@
 	<!-- <h3 class="bracket-title" data-txt="txt21"></h3> -->
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
-		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="">
+		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="g">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -145,7 +145,7 @@
 				<div class="scrollbar-inner list"></div>
 			</div>
 		</div>
-		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="">
+		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="h">
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
